using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Tags
{
    // Start is called before the first frame update
    public const string PLAYER_TAG = "Player";
    public const string ENEMY_TAG = "enemy";
}
public class AnimationTags
{
    public const string WALK_PARATEMER = "walk";
    public const string DEFEND_PARATEMER = "defend";
    public const string ATTACK_TRIGGER_1 = "attack1";
    public const string ATTACK_TRIGGER_2 = "attack2";

}
